--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 asgiref==3.5.0
+boto3==1.23.5
+botocore==1.26.5
 certifi==2021.10.8
 charset-normalizer==2.0.12
 dj-database-url==0.5.0
 Django==4.0.3
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
+django-storages==1.12.3
 gunicorn==20.1.0
 idna==3.3
+jmespath==1.0.0
 Pillow==9.1.0
 psycopg2==2.9.3
+python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
+s3transfer==0.5.2
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
